# ai-pm-portfolio

./: .gitignore  DECISIONS.md  NEXT_WORK.md  OBJECTIVE.md  README.md
.github/workflows/: ci.yml
career-transition/: AI_PM_Transition_Plan.md  Interview_Story_Bank.md  LinkedIn_Profile_Draft.md  Portfolio_Project_Ideas.md  README.md  Resume_Positioning.md
evals-harness/: .gitignore  LICENSE  README.md  pyproject.toml  queries.jsonl
evals-harness/evals_harness/: __init__.py  __main__.py  _repo.py  ingest.py  invariants.py  report.py  score.py
evals-harness/tests/: conftest.py  test_ingest.py  test_invariants.py  test_main.py  test_repo.py  test_report.py  test_score.py
evals-harness/tests/fixtures/: queries_tiny.jsonl  traces_rag.jsonl  traces_tua.jsonl
interview-prep/: README.md  behavioral.md  cursor-teardown.md  evals-harness.md  rag-app.md  tool-use-agent.md
landing-page/: README.md  index.html
prds/: README.md  linear-ai-retro-summarization.md
rag-app/: README.md  make-demo.sh  pyproject.toml  requirements.txt
rag-app/corpus/: CORPUS_CANDIDATES.md  SOURCES.md
rag-app/corpus/anthropic-docs/: agent-skills.md  citations.md  extended-thinking.md  intro.md  models-overview.md  prompt-caching.md  prompt-engineering.md  tool-use.md
rag-app/corpus/cursor-docs/: agent.md  changelog-recent.md  inline-edit.md  mcp.md  models.md  rules.md  skills.md  tab.md
rag-app/corpus/willison/: auto-mode-for-claude-code.md  claude-chrome-cloudflare.md  claude-cowork-first-impressions.md  clinejection.md  moltbook.md  normalization-of-deviance.md  pragmatic-summit-agentic-engineering.md  snowflake-cortex-ai.md
rag-app/rag_app/: __main__.py  corpus.py  generate.py  retrieve.py  trace.py  verify.py
rag-app/tests/: conftest.py  test_corpus.py  test_generate.py  test_main.py  test_retrieve.py  test_verify.py
rag-app/tests/fixtures/tiny_corpus/: OBJECTIVE.md  animals.md
rag-app/tests/fixtures/tiny_corpus/sub/: cities.md
teardown-prd/: CANDIDATES.md  cursor-teardown.md
templates/: COVER_LETTER.md  INTERVIEW_TRACKER.md  OUTREACH.md  RESUME.md  TARGET_COMPANIES.md
tool-use-agent/: .gitignore  README.md  pyproject.toml  requirements.txt
tool-use-agent/fixtures/: README.md  make_sample_db.py  sample.db
tool-use-agent/sandbox/: README.md  notes.md  todos.md
tool-use-agent/tests/: conftest.py  test_agent.py  test_catalog.py  test_main.py  test_tools_pipeline.py  test_tools_regex.py  test_tools_repo.py  test_tools_rewrite.py  test_tools_sql.py  test_trace.py  test_verify.py
tool-use-agent/tests/fixtures/tiny_repo/: OBJECTIVE.md
tool-use-agent/tests/fixtures/tiny_repo/templates/: INTERVIEW_TRACKER.md
tool-use-agent/tool_use_agent/: __main__.py  agent.py  catalog.py  tools_pipeline.py  tools_regex.py  tools_repo.py  tools_rewrite.py  tools_sql.py  trace.py  verify.py
